--- a/views/admin/teacherRequestPreview.hbs
+++ b/views/admin/teacherRequestPreview.hbs
@@ -1234,7 +1234,7 @@
             
                                 </div>
                                 <div class="text-center user-info">
-                                    <img src="/teacher/uploadImages/profileImages/{{response.profileImage}}" alt="avatar">
+                                    <img width="150px" src="/teacher/uploadImages/profileImages/{{response.profileImage}}" alt="avatar">
                                     <p class="">{{response.firstName}} {{response.lastName}}</p>
                                 </div>
                                 <div class="user-info-list">
